--- a/precos/style.css
+++ b/precos/style.css
@@ -35,7 +35,7 @@ footer {
     position:fixed;
     bottom:20px;
     right:20px;
-    
+    background-color:#25d366;
     color:#fff;
     width:150px;
     height:50px;
