--- a/style2.css
+++ b/style2.css
@@ -240,6 +240,11 @@ nav:hover > .lopes {
     
 }
 
+.caminhao {
+    border-radius: 5px;
+    box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.259);
+}
+
 .mud {
     text-align: center;
 }
