--- a/style2.css
+++ b/style2.css
@@ -36,9 +36,14 @@ a.externo::after {
 
 header { 
     background-image: linear-gradient(to bottom, var(--cor3), var(--cor5));
-    min-height: 150px;
+    min-height: 100px;
     text-align: center;
     padding-top: 40px;
+}
+
+
+section {
+    min-height: 500px;
 }
 
 header > h1 {
