--- a/precos/style.css
+++ b/precos/style.css
@@ -8,6 +8,24 @@ header {
     color: white;
 }
 
+h2 {margin: 0;}
+
+
+nav > a {
+    color: #ffffff;
+    padding: 10px;
+    border-radius: 5px;
+    text-decoration: none;
+    font-weight: bold;
+    transition-duration: .5s;
+}
+
+nav > a:hover {
+    color: #0e063d;
+    background-color: var(--cor3);
+    
+}
+
 #bt {font: normal 15pt Impact;
     padding: 5px 30px;
     box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.459);}
