--- a/style2.css
+++ b/style2.css
@@ -287,7 +287,7 @@ footer {
     background-color: var(--cor5);
     color: var(--cor7);
     text-align: center;
-    font-size: 0.8em;
+    font-size: 1em;
     padding: 5px;
 }
 
@@ -300,4 +300,29 @@ footer a {
 footer a:hover {
     text-decoration: underline;
     color: var(--cor1);
+}
+
+
+#bt {font: normal 15pt Impact;
+    padding: 5px 30px;
+    box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.459);}
+
+#sectionpreco {
+    text-align: center;
+    min-width: 290px;
+    background: white;
+    border-radius: 10px;
+    padding: 15px;
+    width: 40%;
+    margin: auto;
+    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.459);
+
+}
+
+#footerpreco {
+    margin: 0px 0px 100px 0px;
+    font: normal 8pt Arial;
+    color: white;
+    text-align: center;
+    font-style: italic;
 }
