--- a/style2.css
+++ b/style2.css
@@ -66,13 +66,84 @@ header > h2 {
     padding-bottom: 20px;
 }
 
+@media screen and (max-width: 1000px) {
+    nav {
+      display: none;
+    }
+  }
+
+  #navfoto {
+    display: none; /* Oculta a imagem por padrão */
+}
+
+.minha-div {
+    padding: 2px 10px;
+    text-align: left;
+    display: block;
+    height: 200px;
+    margin: 20px;
+  }
+
+.menuf {
+    text-align: center;
+    width: 100%;
+    padding: 3px 0px;
+    margin: 5px 0px;
+    box-shadow: 0px 0px 5px rgb(0, 0, 0);
+    background: transparent;
+    color: var(--cor7);
+    display: block;
+    border-radius: 4px;
+    text-decoration: none;
+    font-weight: bold;
+    transition-duration: .5s;
+}
+.menuf:hover {
+    color: var(--cor5);
+    background-color: var(--cor3);
+    
+}
+li > button {
+    text-align: center;
+    width: 100%;
+    padding: 3px 0px;
+    margin: 5px 0px;
+    box-shadow: 0px 0px 5px rgb(0, 0, 0);
+    background: transparent;
+    color: var(--cor7);
+    display: block;
+    border-radius: 4px;
+    text-decoration: none;
+    font-weight: bold;
+    transition-duration: .5s;
+}
+li > button:hover {
+    color: var(--cor5);
+    background-color: var(--cor3);
+    
+}
+
+
+
+
+  
+@media (max-width: 1000px) {
+    #navfoto {
+        padding: 0px 0px 5px 10px;
+        width: 30px;
+        display: block; /* Exibe a imagem em telas menores que 600px */
+    }
+}
+
 nav {
     background-color: var(--cor5);
     padding: 10px;
     box-shadow: 0px 7px 9px rgba(0, 0, 0, 0.452);
 }
 
-nav > a {
+.menu {
+    box-shadow: 0px 0px 5px rgb(0, 0, 0);
+    background: transparent;
     color: var(--cor7);
     padding: 10px;
     border-radius: 5px;
@@ -80,13 +151,25 @@ nav > a {
     font-weight: bold;
     transition-duration: .5s;
 }
-
-nav > a:hover {
+.menu:hover {
     color: var(--cor5);
-    background-color: var(--cor3);
-    
+    background-color: var(--cor3);  
 }
-
+button {
+    box-shadow: 0px 0px 5px rgb(0, 0, 0);
+    background: transparent;
+    color: var(--cor7);
+    padding: 10px;
+    border-radius: 5px;
+    text-decoration: none;
+    font-weight: bold;
+    transition-duration: .5s;
+}
+button:hover {
+    color: var(--cor5);
+    background-color: var(--cor3);  
+}
+ 
 
 main {
     min-width: 300px;
