--- a/style2.css
+++ b/style2.css
@@ -123,9 +123,6 @@ li > button:hover {
     
 }
 
-
-
-
   
 @media (max-width: 1000px) {
     #navfoto {
@@ -182,6 +179,21 @@ main {
     border-radius: 0px 0px 10px 10px;
 }
 
+#img01 {
+    background-image: url('https://images.pexels.com/photos/6169660/pexels-photo-6169660.jpeg');
+    background-position: left bottom;
+}
+
+.imagem  {
+    padding: 10px;
+    background-color:var(--cor1);
+    color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.5);
+    background-size: cover;
+    background-position: right center;
+    background-attachment: fixed;
+}
+
 head h1 {
     color: var(--cor3);
     font-family: var(--fonfe-destaque);
@@ -200,8 +212,17 @@ main h2 {
     text-indent: 15px;
     border-radius: 5px;
 }
+section {
+    min-height: 0px;
+}
+section>div>#pt1{
+    background-color: #00000053;
+    padding: 5px;
+    box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.445);
+}
 
 main p {
+    
     margin: 15px 0px;
     text-align: justify;/* justificacdo */
     text-indent: 30px; /* espaço inicio de paragrafo */
@@ -262,9 +283,9 @@ main img.pequena {
 div.video {
     border-radius: 1%;
     background-color: var(--cor5);
-    margin: 0px -15px 30px -15px;
+    margin: 0px -15px 10px -15px;
     padding: 20px;
-    padding-bottom: 56%;
+    padding-bottom: 40%;
     position: relative;
 }
 
