--- a/style2.css
+++ b/style2.css
@@ -426,7 +426,7 @@ footer a:hover {
 }
 
 #footerpreco {
-    margin: 0px 0px 100px 0px;
+    padding: 10px 0px 100px 0px;
     font: normal 8pt Arial;
     color: white;
     text-align: center;
