--- a/style2.css
+++ b/style2.css
@@ -40,7 +40,11 @@ header {
     text-align: center;
     padding-top: 40px;
 }
-
+.bg-svg1 {
+    fill: var(--cor5);
+    background-color: transparent;
+    width: 100%;
+}
 
 section {
     min-height: 500px;
