--- a/style2.css
+++ b/style2.css
@@ -80,6 +80,9 @@ header > h2 {
     display: none; /* Oculta a imagem por padrão */
 }
 
+#bbb1 {
+    color: var(--cor7);}
+
 .minha-div {
     padding: 2px 10px;
     text-align: left;
@@ -186,7 +189,7 @@ main {
 }
 
 #img01 {
-    background-image: url('https://images.pexels.com/photos/6169660/pexels-photo-6169660.jpeg');
+    background-image: url('imagens/entrega.jpg');
     background-position: left bottom;
 }
 
